Logica para busqueda barra de cards administrador

--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -14,8 +14,9 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <button id="toggleSidebar">☰</button>
-  <input type="text" placeholder="Buscar..." />
+  <input type="text" id="searchInput" placeholder="Buscar..." />
 </header>
+
 
 <!-- SIDEBAR -->
 <aside id="sidebar" class="sidebar">
