--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -20,35 +20,42 @@
 
 <!-- SIDEBAR -->
 <aside id="sidebar" class="sidebar">
-  <h2>PETICOL</h2>
+
+  <div class="sidebar-brand">
+    <h2>PETICOL</h2>
+    <img src="./assets/imagenes/logo.svg" alt="Logo Peticol">
+  </div>
+
   <a href="#">Inicio</a>
   <a href="#">Productos</a>
   <a href="#">Usuarios</a>
   <a href="#">Inventario</a>
   <a href="#">Pedidos</a>
+
 </aside>
+
 
 <!-- CONTENIDO -->
 <main class="content">
   <section class="cards">
 
     <div class="card" data-link="productos.html">
-      <img src="./assets/cards/productos.jpg">
+      <img src="./assets/imagenes/productos2.jpg">
       <div class="card-text">Productos</div>
     </div>
 
     <div class="card" data-link="usuarios.html">
-      <img src="./assets/cards/usuarios.jpg">
+      <img src="./assets/cards/usuarios3.jpg">
       <div class="card-text">Usuarios</div>
     </div>
 
     <div class="card" data-link="inventario.html">
-      <img src="./assets/cards/inventario.jpg">
+      <img src="./assets/cards/inventario2.jpg">
       <div class="card-text">Inventario</div>
     </div>
 
     <div class="card" data-link="pedidos.html">
-      <img src="./assets/cards/pedidos.jpg">
+      <img src="./assets/cards/pedidos2.jpg">
       <div class="card-text">Pedidos</div>
     </div>
 
