Gestion finalizada crud productos

--- a/productos.html
+++ b/productos.html
@@ -78,9 +78,17 @@
       </div>
 
       <div class="form-group">
-        <label>Categoría</label>
-        <input type="text" id="categoria" required>
-      </div>
+  <label>Categoría</label>
+  <select id="categoria">
+    <option value="">Seleccionar categoría</option>
+    <option value="CONCENTRADOS Y ARENA">CONCENTRADOS Y ARENA</option>
+    <option value="MEDICAMENTOS">MEDICAMENTOS</option>
+    <option value="ROPA, JUGUETES Y ACCESORIOS">
+      ROPA, JUGUETES Y ACCESORIOS
+    </option>
+  </select>
+</div>
+
 
       <div class="form-group">
         <label>Cantidad</label>
