Crud usuarios finalizado

--- a/usuarios.html
+++ b/usuarios.html
@@ -103,11 +103,6 @@
       </div>
 
       <div class="form-group">
-        <label>Correo</label>
-        <input type="email" value="juan@empresa.com" required>
-      </div>
-
-      <div class="form-group">
         <label>Rol</label>
         <select required>
           <option>Administrador</option>
@@ -128,7 +123,8 @@
   </div>
 </div>
 
-<script src="./js/usuarios.js"></script>
+<script type="module" src="./js/usuarios.js"></script>
+
 
 
 </body>
