--- a/indexVentas.html
+++ b/indexVentas.html
@@ -51,9 +51,13 @@
     <!-- CARRITO MODERNO -->
     <aside class="cart">
         <div class="cart-header">
-            <h3>Carrito</h3>
-            <span id="cartCount">0 items</span>
-        </div>
+  <h3>Carrito</h3>
+  <div class="cart-header-right">
+    <span id="cartCount">0 items</span>
+    <button class="close-cart">✕</button>
+  </div>
+</div>
+
 
         <div id="carritoItems" class="cart-items"></div>
 
@@ -113,6 +117,13 @@
   </div>
 
   <script type="module" src="./js/ventas.js"></script>
+
+
+  
+
+
+
+
 
 </body>
 </html>
