--- a/historial.html
+++ b/historial.html
@@ -10,6 +10,18 @@
 
 <section class="historial-container">
 
+<div class="theme-toggle">
+  <span>🌙</span>
+  <label class="switch">
+    <input type="checkbox" id="toggleTheme">
+    <span class="slider"></span>
+  </label>
+  <span>☀️</span>
+</div>
+
+
+
+
   <h2>📊 Historial de Ventas</h2>
 
   <!-- Filtros -->
