--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -65,6 +65,12 @@
       <div class="card-text">Historial de ventas</div>
     </div>
 
+    <div class="card" data-link="gastos.html">
+      <img src="./assets/imagenes/gastos.jpg">
+      <div class="card-text">Gastos</div>
+    </div>
+
+
   </section>
 </main>
 
