--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Peticol - Clínica Veterinaria</title>
+  <title>Peticol</title>
 
   <link rel="stylesheet" href="./css/inicio.css">
   <link rel="stylesheet" href="./css/gallery.css">
@@ -48,7 +48,7 @@
     <section class="gallery-section" id="galeria">
 
       <p class="clinic-description">
-        Peticol es una clínica veterinaria dedicada a la venta de alimentos, medicamentos y productos especializados
+        Peticol es un lugar dedicado a la venta de alimentos, medicamentos y productos especializados
         para mascotas, complementando sus servicios con revisión general y peluquería animal. Nos enfocamos en brindar
         atención responsable, productos de calidad y un servicio confiable que contribuya al bienestar y cuidado diario
         de las mascotas.
