--- a/productos.html
+++ b/productos.html
@@ -16,12 +16,13 @@
 
   <!-- 🔝 NAVBAR -->
   <header class="topbar">
+  
+    <button class="btn-back">← Volver</button>
+  
     <h2>Gestión de Productos</h2>
-
+  
     <div class="top-actions">
-      <input
-        type="text"
-        placeholder="Buscar producto..."
+      <input type="text" placeholder="Buscar producto..."
         id="searchProduct"
       >
       <button class="btn primary" id="btnAddProduct">
@@ -80,13 +81,8 @@
       <div class="form-group">
   <label>Categoría</label>
   <select id="categoria">
-    <option value="">Seleccionar categoría</option>
-    <option value="CONCENTRADOS Y ARENA">CONCENTRADOS Y ARENA</option>
-    <option value="MEDICAMENTOS">MEDICAMENTOS</option>
-    <option value="ROPA, JUGUETES Y ACCESORIOS">
-      ROPA, JUGUETES Y ACCESORIOS
-    </option>
-  </select>
+  <option value="">Seleccionar categoría</option>
+</select>
 </div>
 
 
