--- a/usuarios.html
+++ b/usuarios.html
@@ -9,6 +9,9 @@
 <body>
 
 <header class="topbar">
+
+  <button class="btn-back">← Volver</button>
+
   <h2>Usuarios</h2>
   <button class="btn primary" id="btnOpenCreate">
     + Registrar usuario
