--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -45,12 +45,12 @@
 <main class="content">
   <section class="cards">
 
-    <div class="card" data-link="productos.html">
+    <div class="card" data-link="productos.html" data-role="admin-only">
       <img src="./assets/imagenes/productos2.jpg">
       <div class="card-text">Productos</div>
     </div>
 
-    <div class="card" data-link="usuarios.html">
+    <div class="card" data-link="usuarios.html" data-role="admin-only">
       <img src="./assets/cards/usuarios3.jpg">
       <div class="card-text">Usuarios</div>
     </div>
@@ -70,7 +70,7 @@
       <div class="card-text">Gastos</div>
     </div>
 
-    <div class="card" data-link="espacio.html">
+    <div class="card" data-link="espacio.html" data-role="admin-only">
       <img src="https://i.pinimg.com/1200x/9d/c4/5d/9dc45d0657462013253f0cef77540ec0.jpg">
       <div class="card-text">Almacenamiento</div>
     </div>
