--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <nav>
         <ul class="nav-links">
           <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="productosCliente.html">Productos</a></li>
           <li><a href="#nosotros">Nosotros</a></li>
           <li><a href="#login" class="btn">Iniciar Sesion</a></li>
         </ul>
