--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul class="nav-links">
           <li><a href="#inicio">Inicio</a></li>
           <li><a href="productosCliente.html">Productos</a></li>
-          <li><a href="#nosotros">Nosotros</a></li>
+          <li><a href="calendarioCliente.html">Citas agendadas</a></li>
           <li><a href="#login" class="btn">Iniciar Sesion</a></li>
         </ul>
       </nav>
