--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -75,6 +75,17 @@
       <div class="card-text">Almacenamiento</div>
     </div>
 
+     <div class="card" data-link="scanner.html">
+      <img src="https://i.pinimg.com/1200x/f7/ee/99/f7ee993d1902f0d5b55efcb6e4f3f01c.jpg">
+      <div class="card-text">Scanner</div>
+    </div>
+
+    <div class="card" data-link="calendario.html">
+      <img src="https://i.pinimg.com/1200x/f7/ee/99/f7ee993d1902f0d5b55efcb6e4f3f01c.jpg">
+      <div class="card-text">Calendario</div>
+    </div>
+
+
 
   </section>
 </main>
