arreglo productos movil

--- a/productos.html
+++ b/productos.html
@@ -47,6 +47,12 @@
 
         <!-- Grid de cards -->
         <div class="products-grid" id="productosGrid">
+
+          <div class="empty-state" id="emptyState">
+  <p>No hay productos registrados</p>
+  <span>Agrega tu primer producto para comenzar</span>
+</div>
+
           <!-- Cards dinámicas desde JS -->
         </div>
 
